--- a/src/styles/Footer.scss
+++ b/src/styles/Footer.scss
@@ -34,7 +34,7 @@
   opacity: 1;
 }
 
-/* ===== TABLET ===== */
+//tablet
 @media (max-width: 720px) {
   .footer-green {
     padding: 28px 16px;
@@ -55,7 +55,7 @@
   }
 }
 
-/* ===== MOBILE 360px ===== */
+//mobile
 @media (max-width: 360px) {
   .footer-green {
     padding: 24px 12px;
